--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sensors_plus: ^6.0.1
   syncfusion_flutter_charts: ^27.1.52
   permission_handler: ^11.3.1
+  flutter_launcher_icons: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,14 @@ dev_dependencies:
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
 
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/todo_logo.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
